--- a/unityplatform-core/core-commons/pom.xml
+++ b/unityplatform-core/core-commons/pom.xml
@@ -51,6 +51,21 @@
             <version>${hibernate-validator.version}</version>
         </dependency>
 
+        <!--   commons utils     -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+        </dependency>
+        <!--   commons utils     -->
+
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct-jdk8</artifactId>
